# sparsecoding

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: format.yml  github-actions-demo.yml  lint.yml  main.yml  static.yml  test.yml  tests.yml
data/: utils.py
datasets/: datasets.py
dictionaries/: bars-16_by_16.p
docs/: api.rst  conf.py  contributing.md  contributing.rst  index.rst  install.rst  quickstart.rst  requirements.txt
examples/: Data_Whitening.ipynb  Intro_To_Sparse_Coding.ipynb  cel0_inference_bars_example.ipynb  inference.ipynb  inference_bars_example.ipynb  inference_example.ipynb  inference_natural_images.ipynb  ista_example.ipynb  simultaneous.ipynb  sparse_coding.ipynb  sparse_coding_colab.ipynb
pytorch/: sparse_coding.ipynb  torchsmodel.py  utils.py
sparsecoding/: __init__.py  datasets.py  dictionaries.py  inference.py  models.py  preprocess.py  priors.py  visualization.py
sparsecoding/data/: __init__.py  utils.py
sparsecoding/inference/: __init__.py  iht.py  inference_method.py  ista.py  ista_test.py  lca.py  lca_test.py  lsm.py  lsm_test.py  mp.py  omp.py  pytorch_optimizer.py  pytorch_optimizer_test.py  vanilla.py  vanilla_test.py
sparsecoding/prior/: l0.py  spike_slab.py
sparsecoding/priors/: __init__.py  common.py  l0.py  l0_prior.py  laplace.py  lo_prior_test.py  lsm.py  prior.py  spike_slab.py  spike_slab_prior.py  spike_slab_prior_test.py
sparsecoding/test_utils/: __init__.py  asserts.py  asserts_test.py  constant_fixtures.py  dataset_fixtures.py  model_fixtures.py  prior_fixtures.py
sparsecoding/transforms/: __init__.py  images.py  images_patch_test.py  patch.py  whiten.py  whiten_test.py
tests/: data_generation.py  test_ISTA.py  test_LCA.py  test_LSM.py  test_PyTorchOptimizer.py  test_Vanilla.py  test_test.py  test_vanilla.py  testing_utilities.py
tests/inference/: common.py  test_CEL0.py  test_ISTA.py  test_LCA.py  test_LSM.py  test_PyTorchOptimizer.py  test_Vanilla.py
tests/models/: test_Hierarchical.py
(+30 files in other folders)
